--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <meta name="google-site-verification" content="Kfjvg4FT086nlxtQ0-iIi8MmZ7xdaSg-6-OM_MfwfLU" />
  </head>
 <body> <p>
       My name is Behailu Tesfaye  and I own this domain. Contact me on
